<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#2C2C2C"
        tools:ignore="RedundantNamespace">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/popular"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/most_popular_movies"
            android:textColor="@android:color/white"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/popular_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/upcoming"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/stay_updated" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/upcoming_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/top_rated"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:text="@string/highest_rated_movies" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/top_rated_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nowplaying"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"

            />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/nowplayingoncinemas"
            android:textColor="@android:color/white"
            />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/nowplaying"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/comedy"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:text="@string/comedy2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/comedy_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/action"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/action2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/action_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/drama2"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:textColor="@android:color/white"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/drama" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/drama_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/horror"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/horror2"
            android:textColor="@android:color/white"/>
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/horror_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"/>



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/spanish"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/spanish2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/spanish_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/animated"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/animated2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/animated_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />




        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/family"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:textColor="@android:color/white"
            android:text="@string/family2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/family_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/scifi"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/white"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/scifi2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/scifi_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/fantasy"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/fantasy2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/fantasy_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/documentary"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/documentary2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/documentary_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />



        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/western"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/western2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/western_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/war"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/war2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/war_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:text="@string/sports"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold" />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:textColor="@android:color/white"
            android:layout_marginEnd="16dp"
            android:text="@string/sports2" />
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/sports_movies"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="16dp"
            android:clipToPadding="false"
            android:paddingStart="16dp"
            android:paddingEnd="16dp" />

    </LinearLayout>

</androidx.core.widget.NestedScrollView>